add true searching to resources #minor
